src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     params -> NAME
Rule 5     params -> NAME COMMA params
Rule 6     statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 7     statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 8     statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 9     statement -> PRINT LPAREN expression RPAREN
Rule 10    statement -> NAME EGAL expression
Rule 11    statement -> DEF NAME LPAREN params RPAREN LACC bloc RACC
Rule 12    statement -> RETURN expression
Rule 13    statement -> expression
Rule 14    expression -> expression INF expression
Rule 15    expression -> expression INFEG expression
Rule 16    expression -> expression SUP expression
Rule 17    expression -> expression EGALEGAL expression
Rule 18    expression -> expression AND expression
Rule 19    expression -> expression OR expression
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression TIMES expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> NAME LPAREN args RPAREN
Rule 25    args -> <empty>
Rule 26    args -> expression
Rule 27    args -> expression COMMA args
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> NUMBER
Rule 30    expression -> NAME

Terminals, with rules where they appear

AND                  : 18
COMMA                : 5 27
DEF                  : 11
DIVIDE               : 23
EGAL                 : 10
EGALEGAL             : 17
FOR                  : 8
IF                   : 6
INF                  : 14
INFEG                : 15
LACC                 : 6 7 8 11
LPAREN               : 6 7 8 9 11 24 28
MINUS                : 22
NAME                 : 4 5 10 11 24 30
NUMBER               : 29
OR                   : 19
PLUS                 : 20
PRINT                : 9
RACC                 : 6 7 8 11
RETURN               : 12
RPAREN               : 6 7 8 9 11 24 28
SEMI                 : 2 3 8 8
SUP                  : 16
TIMES                : 21
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

args                 : 24 27
bloc                 : 1 2 6 7 8 11
expression           : 6 7 8 9 10 12 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 26 27 28
params               : 5 11
start                : 0
statement            : 2 3 8 8

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression
    (13) statement -> . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 10
    DEF             shift and go to state 11
    RETURN          shift and go to state 12
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression
    (13) statement -> . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 10
    DEF             shift and go to state 11
    RETURN          shift and go to state 12
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 6

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 15


state 4

    (6) statement -> IF . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 16


state 5

    (28) expression -> LPAREN . expression RPAREN
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 17

state 6

    (13) statement -> expression .
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 13 (statement -> expression .)
    RPAREN          reduce using rule 13 (statement -> expression .)
    INF             shift and go to state 19
    INFEG           shift and go to state 20
    SUP             shift and go to state 21
    EGALEGAL        shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
    DIVIDE          shift and go to state 28


state 7

    (7) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 29


state 8

    (8) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 30


state 9

    (9) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 10

    (10) statement -> NAME . EGAL expression
    (24) expression -> NAME . LPAREN args RPAREN
    (30) expression -> NAME .

    EGAL            shift and go to state 32
    LPAREN          shift and go to state 33
    INF             reduce using rule 30 (expression -> NAME .)
    INFEG           reduce using rule 30 (expression -> NAME .)
    SUP             reduce using rule 30 (expression -> NAME .)
    EGALEGAL        reduce using rule 30 (expression -> NAME .)
    AND             reduce using rule 30 (expression -> NAME .)
    OR              reduce using rule 30 (expression -> NAME .)
    PLUS            reduce using rule 30 (expression -> NAME .)
    TIMES           reduce using rule 30 (expression -> NAME .)
    MINUS           reduce using rule 30 (expression -> NAME .)
    DIVIDE          reduce using rule 30 (expression -> NAME .)
    SEMI            reduce using rule 30 (expression -> NAME .)
    RPAREN          reduce using rule 30 (expression -> NAME .)


state 11

    (11) statement -> DEF . NAME LPAREN params RPAREN LACC bloc RACC

    NAME            shift and go to state 34


state 12

    (12) statement -> RETURN . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 35

state 13

    (29) expression -> NUMBER .

    INF             reduce using rule 29 (expression -> NUMBER .)
    INFEG           reduce using rule 29 (expression -> NUMBER .)
    SUP             reduce using rule 29 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 29 (expression -> NUMBER .)
    AND             reduce using rule 29 (expression -> NUMBER .)
    OR              reduce using rule 29 (expression -> NUMBER .)
    PLUS            reduce using rule 29 (expression -> NUMBER .)
    TIMES           reduce using rule 29 (expression -> NUMBER .)
    MINUS           reduce using rule 29 (expression -> NUMBER .)
    DIVIDE          reduce using rule 29 (expression -> NUMBER .)
    SEMI            reduce using rule 29 (expression -> NUMBER .)
    RPAREN          reduce using rule 29 (expression -> NUMBER .)
    COMMA           reduce using rule 29 (expression -> NUMBER .)


state 14

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 36


state 15

    (3) bloc -> statement SEMI .

    IF              reduce using rule 3 (bloc -> statement SEMI .)
    WHILE           reduce using rule 3 (bloc -> statement SEMI .)
    FOR             reduce using rule 3 (bloc -> statement SEMI .)
    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    DEF             reduce using rule 3 (bloc -> statement SEMI .)
    RETURN          reduce using rule 3 (bloc -> statement SEMI .)
    LPAREN          reduce using rule 3 (bloc -> statement SEMI .)
    NUMBER          reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACC            reduce using rule 3 (bloc -> statement SEMI .)


state 16

    (6) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 37

state 17

    (28) expression -> LPAREN expression . RPAREN
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 38
    INF             shift and go to state 19
    INFEG           shift and go to state 20
    SUP             shift and go to state 21
    EGALEGAL        shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
    DIVIDE          shift and go to state 28


state 18

    (24) expression -> NAME . LPAREN args RPAREN
    (30) expression -> NAME .

    LPAREN          shift and go to state 33
    RPAREN          reduce using rule 30 (expression -> NAME .)
    INF             reduce using rule 30 (expression -> NAME .)
    INFEG           reduce using rule 30 (expression -> NAME .)
    SUP             reduce using rule 30 (expression -> NAME .)
    EGALEGAL        reduce using rule 30 (expression -> NAME .)
    AND             reduce using rule 30 (expression -> NAME .)
    OR              reduce using rule 30 (expression -> NAME .)
    PLUS            reduce using rule 30 (expression -> NAME .)
    TIMES           reduce using rule 30 (expression -> NAME .)
    MINUS           reduce using rule 30 (expression -> NAME .)
    DIVIDE          reduce using rule 30 (expression -> NAME .)
    SEMI            reduce using rule 30 (expression -> NAME .)
    COMMA           reduce using rule 30 (expression -> NAME .)


state 19

    (14) expression -> expression INF . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 39

state 20

    (15) expression -> expression INFEG . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 40

state 21

    (16) expression -> expression SUP . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 41

state 22

    (17) expression -> expression EGALEGAL . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 42

state 23

    (18) expression -> expression AND . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 43

state 24

    (19) expression -> expression OR . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 44

state 25

    (20) expression -> expression PLUS . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 45

state 26

    (21) expression -> expression TIMES . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 46

state 27

    (22) expression -> expression MINUS . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 47

state 28

    (23) expression -> expression DIVIDE . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 48

state 29

    (7) statement -> WHILE LPAREN . expression RPAREN LACC bloc RACC
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 49

state 30

    (8) statement -> FOR LPAREN . statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (6) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (7) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (8) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (9) statement -> . PRINT LPAREN expression RPAREN
    (10) statement -> . NAME EGAL expression
    (11) statement -> . DEF NAME LPAREN params RPAREN LACC bloc RACC
    (12) statement -> . RETURN expression
    (13) statement -> . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    IF              shift and go to state 4
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 10
    DEF             shift and go to state 11
    RETURN          shift and go to state 12
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    statement                      shift and go to state 50
    expression                     shift and go to state 6

state 31

    (9) statement -> PRINT LPAREN . expression RPAREN
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 51

state 32

    (10) statement -> NAME EGAL . expression
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    expression                     shift and go to state 52

state 33

    (24) expression -> NAME LPAREN . args RPAREN
    (25) args -> .
    (26) args -> . expression
    (27) args -> . expression COMMA args
    (14) expression -> . expression INF expression
    (15) expression -> . expression INFEG expression
    (16) expression -> . expression SUP expression
    (17) expression -> . expression EGALEGAL expression
    (18) expression -> . expression AND expression
    (19) expression -> . expression OR expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . NAME LPAREN args RPAREN
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . NAME

    RPAREN          reduce using rule 25 (args -> .)
    NAME            shift and go to state 18
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 13

    args                           shift and go to state 53
    expression                     shift and go to state 54

state 34

    (11) statement -> DEF NAME . LPAREN params RPAREN LACC bloc RACC

    LPAREN          shift and go to state 55


state 35

    (12) statement -> RETURN expression .
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 12 (statement -> RETURN expression .)
    RPAREN          reduce using rule 12 (statement -> RETURN expression .)
    INF             shift and go to state 19
    INFEG           shift and go to state 20
    SUP             shift and go to state 21
    EGALEGAL        shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
    DIVIDE          shift and go to state 28


state 36

    (2) bloc -> bloc statement SEMI .

    IF              reduce using rule 2 (bloc -> bloc statement SEMI .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMI .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMI .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMI .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMI .)
    DEF             reduce using rule 2 (bloc -> bloc statement SEMI .)
    RETURN          reduce using rule 2 (bloc -> bloc statement SEMI .)
    LPAREN          reduce using rule 2 (bloc -> bloc statement SEMI .)
    NUMBER          reduce using rule 2 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMI .)
    RACC            reduce using rule 2 (bloc -> bloc statement SEMI .)


state 37

    (6) statement -> IF LPAREN expression . RPAREN LACC bloc RACC
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 56
    INF             shift and go to state 19
    INFEG           shift and go to state 20
    SUP             shift and go to state 21
    EGALEGAL        shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
    DIVIDE          shift and go to state 28


state 38

    (28) expression -> LPAREN expression RPAREN .

    INF             reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    INFEG           reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    SUP             reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    EGALEGAL        reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 28 (expression -> LPAREN expression RPAREN .)
    COMMA           reduce using rule 28 (expression -> LPAREN expression RPAREN .)


state 39

    (14) expression -> expression INF expression .
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    INF             reduce using rule 14 (expression -> expression INF expression .)
    INFEG           reduce using rule 14 (expression -> expression INF expression .)
    SUP             reduce using rule 14 (expression -> expression INF expression .)
    EGALEGAL        reduce using rule 14 (expression -> expression INF expression .)
    AND             reduce using rule 14 (expression -> expression INF expression .)
    OR              reduce using rule 14 (expression -> expression INF expression .)
    SEMI            reduce using rule 14 (expression -> expression INF expression .)
    RPAREN          reduce using rule 14 (expression -> expression INF expression .)
    COMMA           reduce using rule 14 (expression -> expression INF expression .)
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
    DIVIDE          shift and go to state 28

  ! PLUS            [ reduce using rule 14 (expression -> expression INF expression .) ]
  ! TIMES           [ reduce using rule 14 (expression -> expression INF expression .) ]
  ! MINUS           [ reduce using rule 14 (expression -> expression INF expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression INF expression .) ]
  ! INF             [ shift and go to state 19 ]
  ! INFEG           [ shift and go to state 20 ]
  ! SUP             [ shift and go to state 21 ]
  ! EGALEGAL        [ shift and go to state 22 ]
  ! AND             [ shift and go to state 23 ]
  ! OR              [ shift and go to state 24 ]


state 40

    (15) expression -> expression INFEG expression .
    (14) expression -> expression . INF expression
    (15) expression -> expression . INFEG expression
    (16) expression -> expression . SUP expression
    (17) expression -> expression . EGALEGAL expression
    (18) expression -> expression . AND expression
    (19) expression -> expression . OR expression
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression

    INF             reduce using rule 15 (expression -> expression INFEG expression .)
    INFEG           reduce using rule 15 (expression -> expression INFEG expression .)
    SUP             reduce using rule 15 (expression -> expression INFEG expression .)
    EGALEGAL        reduce using rule 15 (expression -> expression INFEG expression .)
    AND             reduce using rule 15 (expression -> expression INFEG expression .)
    OR              reduce using rule 15 (expression -> expression INFEG expression .)
    SEMI            reduce using rule 15 (expression -> expression INFEG expression .)
    RPAREN          reduce using rule 15 (expression -> expression INFEG expression .)
    COMMA           reduce using rule 15 (expression -> expression INFEG expression .)
    PLUS            shift and go to state 25
    TIMES           shift and go to state 26
    MINUS           shift and go to state 27
